--- a/package.xml
+++ b/package.xml
@@ -35,7 +35,7 @@
    <file name="php_jsmin.h" role="src" />
    <file name="jsmin.c" role="src" />
    <file name="jsmin.h" role="src" />
-   <dir name="tests" role="test" >
+   <dir name="tests" role="test">
     <file name="call-multiple-times.phpt" role="test" />
     <file name="false-on-failure.phpt" role="test" />
     <file name="issue-03-string-type-on-empty-arg.phpt" role="test" />
@@ -53,6 +53,9 @@
    <php>
     <min>5.3.0</min>
    </php>
+   <pearinstaller>
+    <min>1.4.3</min>
+   </pearinstaller>
   </required>
  </dependencies>
  <providesextension>jsmin</providesextension>
