--- a/package.xml
+++ b/package.xml
@@ -11,10 +11,9 @@
   <active>yes</active>
  </lead>
  <date>2013-07-26</date>
- <time>04:36:20</time>
  <version>
-  <release>0.1.0</release>
-  <api>0.1.0</api>
+  <release>0.1.1</release>
+  <api>0.1.1</api>
  </version>
  <stability>
   <release>beta</release>
@@ -61,6 +60,21 @@
  <providesextension>jsmin</providesextension>
  <extsrcrelease />
  <changelog> 
+  <release> 
+   <date>2013-09-14</date> 
+   <version> 
+    <release>0.1.1</release> 
+    <api>0.1.1</api> 
+   </version> 
+   <stability> 
+    <release>beta</release> 
+    <api>beta</api> 
+   </stability>  
+   <notes>
+    - Version number fixes
+    - Windows fixes (thanks weltling)
+   </notes> 
+  </release> 
   <release> 
    <date>2013-07-26</date> 
    <version> 
