--- a/package.xml
+++ b/package.xml
@@ -10,10 +10,10 @@
   <email>sqmk@php.net</email>
   <active>yes</active>
  </lead>
- <date>2014-12-20</date>
+ <date>2014-2-06</date>
  <version>
-  <release>1.0.0</release>
-  <api>1.0.0</api>
+  <release>1.1.0</release>
+  <api>1.1.0</api>
  </version>
  <stability>
   <release>stable</release>
@@ -21,7 +21,8 @@
  </stability>
  <license filesource="LICENSE">PHP License</license>
  <notes>
-    - Stable release
+    - Add second argument to jsmin to return error code (thanks c9s)
+    - Bug fixes (thanks c9s)
  </notes>
  <contents>
   <dir name="/">
@@ -33,6 +34,7 @@
    <file name="php_jsmin.h" role="src" />
    <file name="jsmin.c" role="src" />
    <file name="jsmin.h" role="src" />
+   <file name="tests/99-compress-jquery.phpt" role="test" />
    <file name="tests/call-multiple-times.phpt" role="test" />
    <file name="tests/false-on-failure.phpt" role="test" />
    <file name="tests/issue-03-string-type-on-empty-arg.phpt" role="test" />
