--- a/package.xml
+++ b/package.xml
@@ -10,10 +10,10 @@
   <email>sqmk@php.net</email>
   <active>yes</active>
  </lead>
- <date>2015-11-12</date>
+ <date>2015-11-13</date>
  <version>
-  <release>2.0.0</release>
-  <api>2.0.0</api>
+  <release>2.0.1</release>
+  <api>2.0.1</api>
  </version>
  <stability>
   <release>stable</release>
@@ -21,7 +21,7 @@
  </stability>
  <license filesource="LICENSE">PHP License</license>
  <notes>
-    - UTF-8 support (@c9s)
+    - MSVC support (@Jan-E)
  </notes>
  <contents>
   <dir name="/">
@@ -53,7 +53,7 @@
  <dependencies>
   <required>
    <php>
-    <min>5.5.0</min>
+    <min>5.4.0</min>
    </php>
    <pearinstaller>
     <min>1.4.3</min>
